- "markers" command: add support for the panel-data case
  where the number of markers equals the number of cross-
  sectional units
- "delete" command: add option to delete all variables of a
  specified type
- "qlrtest" command: compute asymptotic p-value as per Bruce
  Hansen's method (1997)
- "modeltab" command: add --output option to direct the model
  table to a specified file
- You can now use "bundle b = null" to create a new bundle or
  empty an existing one
- Enable more streamlined syntax for setting and accessing
  objects within bundles, as in bundle.member
- Add new string function strstrip()
- Add new data-manipulation function aggregate()
- Add new function quadtable(), for Gauss quadrature
- lags() function: add an optional third parameter to control
  the ordering of terms in the output list
- mread() and mwrite() functions: add an optional argument to
  direct read/write to the user's "dot directory"
- Add accessors $obsmajor and $obsminor to get series holding
  (for example) year and month; also $obsmicro for daily data
- Improve structural integrity of model specification dialog
  (it now behaves properly on resizing)
- Gnuplot version: require 4.4.0 (March 2010) or higher
- GUI preferences dialog: add facility to set the default scale
  for PNG plots
- GUI Tools menu: add an item to launch an interactive gnuplot
  session
- GUI Add menu: add support for auto-generated dummy variables
  that code for a specific range of observations (or a single
  observation)
- Fix bug: transient objects created within functions were 
  appearing in the GUI icon view window
- Fix bug: possible crash when regressors are dropped from a
  random-effects panel model due to near-prefect collinearity
- Fix bug: possible crash in vecm with lag order 1 and no 
  deterministic terms
- Fix bug: loss of precision when printing data to CSV file,
  in some cases
- User's Guide: clarify the use of string substitution, plus
  numerous small updates